--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ include = [
 [dependencies]
 bitflags = "2.0"
 crc32fast = "1.2.0"
+#fdeflate = { version = "0.3.3", path = "../fdeflate" }
 fdeflate = "0.3.3"
 flate2 = "1.0.11"
 miniz_oxide = { version = "0.8", features = ["simd"] }
