--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ include = [
 [dependencies]
 bitflags = "2.0"
 crc32fast = "1.2.0"
-fdeflate = "0.3.3"
+fdeflate = { path = "../fdeflate" }
 flate2 = "1.0.11"
 miniz_oxide = { version = "0.8", features = ["simd"] }
 
